# Crossword

./: .gitignore  CLAUDE.md  EVALUATION.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml  test.yml
docs/: architecture.md  monitoring.md  roadmap.md  standards.md
models/: Modelfile.clue-writer  Modelfile.grid-constructor  Modelfile.overseer  Modelfile.theme-agent  Modelfile.word-selector
resources/: fallback_wordlist.txt
scripts/: build-cluedb.py  build-wordlist.py  download-data.sh  fine-tune.py  install-models.sh  prepare-training-data.py  setup-binaries.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  ollama_process.rs
src-tauri/src/ai/: mod.rs  ollama_client.rs
src-tauri/src/ai/agents/: clue_writer.rs  grid_constructor.rs  mod.rs  overseer.rs  theme_agent.rs  word_selector.rs
src-tauri/src/commands/: ai.rs  autofill.rs  fileio.rs  grid.rs  mod.rs  worddb.rs
src-tauri/src/engine/: grid.rs  mod.rs  scorer.rs  solver.rs  validator.rs  worddb.rs
src-tauri/src/formats/: json.rs  mod.rs  nyt.rs  pdf.rs  puz.rs
src/__tests__/: keyboard.test.ts  puzzleStore.test.ts
src/components/: CluePanel.tsx  CrosswordGrid.tsx  Toolbar.tsx  WordListPanel.tsx
src/hooks/: useKeyboard.ts
src/lib/: tauriCommands.ts
src/stores/: puzzleStore.ts  uiStore.ts
src/types/: crossword.ts
src/utils/: autofill.ts  crosswordUtils.ts
(+14 files in other folders)
