[package]
name = "crossforge"
version = "0.1.0"
description = "CrossForge — Professional Crossword Construction Suite"
authors = ["CrossForge"]
edition = "2021"
rust-version = "1.70"

[[bin]]
name = "crossforge"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["full"] }
rayon = "1.10"

# HTTP client for Ollama
reqwest = { version = "0.12", features = ["json", "stream"] }

# PDF generation
printpdf = "0.8"

# SQLite for clue database
rusqlite = { version = "0.32", features = ["bundled"] }

# Bit manipulation for bitmap word index
bitvec = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Encoding for .puz format (Latin-1)
encoding_rs = "0.8"

# Regex for word list processing
regex = "1"

# Logging
log = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1
